syntax = "proto3";

option go_package = "demo-1/presence";
import "google/protobuf/timestamp.proto";

package presence;

// The greeting service definition.
service Presence {
  rpc ServerUpdate (ServerUpdateRequest) returns (ServerUpdateResponse) {}
  rpc ClientUpdate (ClientUpdateRequest) returns (ClientUpdateResponse) {}
  rpc ListPlayer (ListPlayerRequest) returns (ListPlayerResponse) {}
}

// Server Update
message ServerUpdateRequest {
  string serverId = 1;
  string map = 2;
  repeated string playerIds = 3;
}
message ServerUpdateResponse {}

// Saved in Redis after ServerUpdate
message ServerPresence {
  string serverId = 1;
  string map = 2;
  google.protobuf.Timestamp updatedAt = 3;
}

// Client Update
message ClientUpdateRequest {
  string playerId = 1;
  string action = 2;
}
message ClientUpdateResponse {}

// Saved in Redis after ClientUpdate
message ClientPresence {
  string action = 1;
  google.protobuf.Timestamp updatedAt = 2;
}

// List PLayers
message ListPlayerRequest {
  repeated string playerIds = 1;
}
message ListPlayerResponse {
  map<string, Player> players = 1;
}

enum PlayerState {
  Offline = 0;
  Idle = 1;
  Online = 2;
}

message Player {
  PlayerState state = 1;
  string action = 2;
  string serverId = 3;
  string map = 4;
  google.protobuf.Timestamp updatedAt = 5;
}
